added small projects for first three

--- a/index.html
+++ b/index.html
@@ -363,24 +363,34 @@
 
   <!-- Other Project Modals -->
 
-  <!-- <div class="modal micromodal-slide" id="react-blog-modal" aria-hidden="true">
+  <div class="modal micromodal-slide" id="react-blog-modal" aria-hidden="true">
     <div class="modal__overlay" tabindex="-1" data-micromodal-close>
       <div class="modal__container" role="dialog" aria-modal="true">
         <header class="modal__header">
-          <h2 class="modal__title">
-          React Blog
-        </h2>
-          <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+          <div class="modal-title">
+            React Blog
+          </div>
+          <div class="modal-role">
+            Development Project
+          </div>
+          <button class="modal__close" data-micromodal-close>
+            <i class="fa fa-times" data-micromodal-close aria-hidden="true"></i>
+          </button>
         </header>
         <main class="modal__content">
-          <p>
-            Example
-          </p>
+
+          <div class="modal-description">
+            I created a full-stack blog platform using React, Redux, MongoDB, Node.js and Express. The blog supports
+            basic blog functionality, maintains a commenting system, and also requires user authentication.
+          </div>
+          <div class="modal-description">
+            <a class="modal-small-link" target="_blank" href="http://justinluo-redux-blog.surge.sh/">See website</a>
+          </div>
+
+          <div class="modal-image-container">
+            <img class="modal-image" id="macbook" src="./img/small/react-blog.png" />
+          </div>
         </main>
-        <footer class="modal__footer">
-          <button class="modal__btn modal__btn-primary">Continue</button>
-          <button class="modal__btn" data-micromodal-close aria-label="Close this dialog window">Close</button>
-        </footer>
       </div>
     </div>
   </div>
@@ -389,20 +399,33 @@
     <div class="modal__overlay" tabindex="-1" data-micromodal-close>
       <div class="modal__container" role="dialog" aria-modal="true">
         <header class="modal__header">
-          <h2 class="modal__title">
+          <div class="modal-title">
             Crunch
-          </h2>
-          <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+          </div>
+          <div class="modal-role">
+            Product Designer
+          </div>
+          <button class="modal__close" data-micromodal-close>
+            <i class="fa fa-times" data-micromodal-close aria-hidden="true"></i>
+          </button>
         </header>
         <main class="modal__content">
-          <p>
-            Example
-          </p>
+
+          <div class="modal-description">
+            Crunch is a prototype concept for AR sunglasses that provides valuable information to outdoor sports
+            enthusiasts via a HUD. Crunch brings technology to the outdoors, creating a safer environment
+            for outdoor enthusiasts.
+          </div>
+          <div class="modal-description">
+            <a class="modal-small-link" target="_blank" href="./pages/crunch.pdf">See PDF presentation</a>
+          </div>
+
+          <div class="modal-image-container">
+            <iframe class="modal-video" src="https://www.youtube.com/embed/_1MSaKNloxc" allowfullscreen="allowfullscreen"
+              mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen"
+              webkitallowfullscreen="webkitallowfullscreen">></iframe>
+          </div>
         </main>
-        <footer class="modal__footer">
-          <button class="modal__btn modal__btn-primary">Continue</button>
-          <button class="modal__btn" data-micromodal-close aria-label="Close this dialog window">Close</button>
-        </footer>
       </div>
     </div>
   </div>
@@ -411,42 +434,65 @@
     <div class="modal__overlay" tabindex="-1" data-micromodal-close>
       <div class="modal__container" role="dialog" aria-modal="true">
         <header class="modal__header">
-          <h2 class="modal__title">
+          <div class="modal-title">
             Handout Pocket
-          </h2>
-          <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+          </div>
+          <div class="modal-role">
+            Product Designer
+          </div>
+          <button class="modal__close" data-micromodal-close>
+            <i class="fa fa-times" data-micromodal-close aria-hidden="true"></i>
+          </button>
         </header>
         <main class="modal__content">
-          <p>
-            Example
-          </p>
+
+          <div class="modal-description">
+            The bell rings, you put your papers away in a folder, throw the folder into your backpack, and head towards
+            the door. "Wait, please pick up a problem set before you leave," the professor says. All
+            the students around you groan as they take off their backpacks, but you've got a Handout
+            Pocket. Now all those last minute handouts have a space to go, and you can be on your way
+            out the door!
+          </div>
+          <div class="modal-description">
+            <a class="modal-small-link" target="_blank" href="./pages/handout-pocket.pdf">See PDF presentation</a>
+          </div>
+
+          <div class="modal-image-container">
+            <img class="modal-image" src="./img/small/hnadout.png" />
+          </div>
         </main>
-        <footer class="modal__footer">
-          <button class="modal__btn modal__btn-primary">Continue</button>
-          <button class="modal__btn" data-micromodal-close aria-label="Close this dialog window">Close</button>
-        </footer>
       </div>
     </div>
   </div>
 
-  <div class="modal micromodal-slide" id="team4tech-modal" aria-hidden="true">
+  <!-- <div class="modal micromodal-slide" id="team4tech-modal" aria-hidden="true">
     <div class="modal__overlay" tabindex="-1" data-micromodal-close>
       <div class="modal__container" role="dialog" aria-modal="true">
         <header class="modal__header">
-          <h2 class="modal__title">
-            Team4Tech
-          </h2>
-          <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+          <div class="modal-title">
+            React Blog
+          </div>
+          <div class="modal-role">
+            Development Project
+          </div>
+          <button class="modal__close" data-micromodal-close>
+            <i class="fa fa-times" data-micromodal-close aria-hidden="true"></i>
+          </button>
         </header>
         <main class="modal__content">
-          <p>
-            Example
-          </p>
+
+          <div class="modal-description">
+            I created a full-stack blog platform using React, Redux, MongoDB, Node.js and Express. The blog supports
+            basic blog functionality, maintains a commenting system, and also requires user authentication.
+          </div>
+          <div class="modal-description">
+            <a class="modal-small-link" target="_blank" href="http://justinluo-redux-blog.surge.sh/">See website</a>
+          </div>
+
+          <div class="modal-image-container">
+            <img class="modal-image" src="./img/small/react-blog.png" />
+          </div>
         </main>
-        <footer class="modal__footer">
-          <button class="modal__btn modal__btn-primary">Continue</button>
-          <button class="modal__btn" data-micromodal-close aria-label="Close this dialog window">Close</button>
-        </footer>
       </div>
     </div>
   </div>
@@ -455,20 +501,30 @@
     <div class="modal__overlay" tabindex="-1" data-micromodal-close>
       <div class="modal__container" role="dialog" aria-modal="true">
         <header class="modal__header">
-          <h2 class="modal__title">
-            Seabird Apps
-          </h2>
-          <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+          <div class="modal-title">
+            React Blog
+          </div>
+          <div class="modal-role">
+            Development Project
+          </div>
+          <button class="modal__close" data-micromodal-close>
+            <i class="fa fa-times" data-micromodal-close aria-hidden="true"></i>
+          </button>
         </header>
         <main class="modal__content">
-          <p>
-            Example
-          </p>
+
+          <div class="modal-description">
+            I created a full-stack blog platform using React, Redux, MongoDB, Node.js and Express. The blog supports
+            basic blog functionality, maintains a commenting system, and also requires user authentication.
+          </div>
+          <div class="modal-description">
+            <a class="modal-small-link" target="_blank" href="http://justinluo-redux-blog.surge.sh/">See website</a>
+          </div>
+
+          <div class="modal-image-container">
+            <img class="modal-image" src="./img/small/react-blog.png" />
+          </div>
         </main>
-        <footer class="modal__footer">
-          <button class="modal__btn modal__btn-primary">Continue</button>
-          <button class="modal__btn" data-micromodal-close aria-label="Close this dialog window">Close</button>
-        </footer>
       </div>
     </div>
   </div>
@@ -477,20 +533,30 @@
     <div class="modal__overlay" tabindex="-1" data-micromodal-close>
       <div class="modal__container" role="dialog" aria-modal="true">
         <header class="modal__header">
-          <h2 class="modal__title">
-            Making It Stick
-          </h2>
-          <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+          <div class="modal-title">
+            React Blog
+          </div>
+          <div class="modal-role">
+            Development Project
+          </div>
+          <button class="modal__close" data-micromodal-close>
+            <i class="fa fa-times" data-micromodal-close aria-hidden="true"></i>
+          </button>
         </header>
         <main class="modal__content">
-          <p>
-            Example
-          </p>
+
+          <div class="modal-description">
+            I created a full-stack blog platform using React, Redux, MongoDB, Node.js and Express. The blog supports
+            basic blog functionality, maintains a commenting system, and also requires user authentication.
+          </div>
+          <div class="modal-description">
+            <a class="modal-small-link" target="_blank" href="http://justinluo-redux-blog.surge.sh/">See website</a>
+          </div>
+
+          <div class="modal-image-container">
+            <img class="modal-image" src="./img/small/react-blog.png" />
+          </div>
         </main>
-        <footer class="modal__footer">
-          <button class="modal__btn modal__btn-primary">Continue</button>
-          <button class="modal__btn" data-micromodal-close aria-label="Close this dialog window">Close</button>
-        </footer>
       </div>
     </div>
   </div>
@@ -499,20 +565,30 @@
     <div class="modal__overlay" tabindex="-1" data-micromodal-close>
       <div class="modal__container" role="dialog" aria-modal="true">
         <header class="modal__header">
-          <h2 class="modal__title">
-            Design Thinking Teaching Assitant
-          </h2>
-          <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+          <div class="modal-title">
+            React Blog
+          </div>
+          <div class="modal-role">
+            Development Project
+          </div>
+          <button class="modal__close" data-micromodal-close>
+            <i class="fa fa-times" data-micromodal-close aria-hidden="true"></i>
+          </button>
         </header>
         <main class="modal__content">
-          <p>
-            Example
-          </p>
+
+          <div class="modal-description">
+            I created a full-stack blog platform using React, Redux, MongoDB, Node.js and Express. The blog supports
+            basic blog functionality, maintains a commenting system, and also requires user authentication.
+          </div>
+          <div class="modal-description">
+            <a class="modal-small-link" target="_blank" href="http://justinluo-redux-blog.surge.sh/">See website</a>
+          </div>
+
+          <div class="modal-image-container">
+            <img class="modal-image" src="./img/small/react-blog.png" />
+          </div>
         </main>
-        <footer class="modal__footer">
-          <button class="modal__btn modal__btn-primary">Continue</button>
-          <button class="modal__btn" data-micromodal-close aria-label="Close this dialog window">Close</button>
-        </footer>
       </div>
     </div>
   </div>
@@ -521,22 +597,34 @@
     <div class="modal__overlay" tabindex="-1" data-micromodal-close>
       <div class="modal__container" role="dialog" aria-modal="true">
         <header class="modal__header">
-          <h2 class="modal__title">
-            Maze Solver
-          </h2>
-          <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+          <div class="modal-title">
+            React Blog
+          </div>
+          <div class="modal-role">
+            Development Project
+          </div>
+          <button class="modal__close" data-micromodal-close>
+            <i class="fa fa-times" data-micromodal-close aria-hidden="true"></i>
+          </button>
         </header>
         <main class="modal__content">
-          <p>
-            Example
-          </p>
-          <footer class="modal__footer">
-            <button class="modal__btn modal__btn-primary">Continue</button>
-            <button class="modal__btn" data-micromodal-close aria-label="Close this dialog window">Close</button>
-          </footer>
+
+          <div class="modal-description">
+            I created a full-stack blog platform using React, Redux, MongoDB, Node.js and Express. The blog supports
+            basic blog functionality, maintains a commenting system, and also requires user authentication.
+          </div>
+          <div class="modal-description">
+            <a class="modal-small-link" target="_blank" href="http://justinluo-redux-blog.surge.sh/">See website</a>
+          </div>
+
+          <div class="modal-image-container">
+            <img class="modal-image" src="./img/small/react-blog.png" />
+          </div>
+        </main>
       </div>
     </div>
   </div> -->
+
   <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/micromodal/dist/micromodal.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
