--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
             <!-- <a class="project-link" href="./pages/stic.html">
               <p>See the process</p>
             </a> -->
+            <p> Details coming soon! </p>
           </div>
           <div class="project-photo">
             <img class="project-img" src="./img/stic-logo.png" />
@@ -217,20 +218,8 @@
     </div>
 
     <div class="other-projects">
-      <div class="small-project-card" style="background-image: url(./img/reactblog-icon.png)" data-micromodal-trigger="react-blog-modal">
-        <div class="background-overlay">
-        </div>
-        <div class="small-text-wrapper">
-          <div class="small-text">
-            <h2 class="small-title">React Blog</h2>
-            <h2 class="small-role">Development Project</h2>
-            <ul class="keys-list" id="small-keys-list">
-              <li class="small-key" id="react">REACT/REDUX</li>
 
-            </ul>
-          </div>
-        </div>
-      </div>
+
 
 
       <div class="small-project-card" style="background-image: url(./img/crunch-logo.png)" data-micromodal-trigger="crunch-modal">
@@ -264,6 +253,23 @@
           </div>
         </div>
       </div>
+
+      <div class="small-project-card" style="background-image: url(./img/making-logo.png)" data-micromodal-trigger="making-modal">
+        <div class="background-overlay">
+        </div>
+        <div class="small-text-wrapper">
+
+          <div class="small-text">
+            <h2 class="small-title">Making It Stick</h2>
+            <h2 class="small-role">UI/UX Designer</h2>
+            <ul class="keys-list" id="small-keys-list">
+              <li class="small-key" id="ux">UX</li>
+              <li class="small-key" id="ui">UI</li>
+              <li class="small-key" id="illustrator">Illustrator</li>
+            </ul>
+          </div>
+        </div>
+      </div>
       <div class="small-project-card" style="background-image: url(./img/team4tech-logo.png)" data-micromodal-trigger="team4tech-modal">
         <div class="background-overlay">
         </div>
@@ -276,6 +282,22 @@
             <ul class="keys-list" id="small-keys-list">
               <li class="small-key" id="marketing">Marketing</li>
               <li class="small-key" id="illustrator">Illustrator</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="small-project-card" style="background-image: url(./img/reactblog-icon.png)" data-micromodal-trigger="react-blog-modal">
+        <div class="background-overlay">
+        </div>
+        <div class="small-text-wrapper">
+          <div class="small-text">
+            <h2 class="small-title">React Blog</h2>
+            <h2 class="small-role">Development Project</h2>
+            <ul class="keys-list" id="small-keys-list">
+              <li class="small-key" id="react">REACT/REDUX</li>
+
             </ul>
           </div>
         </div>
@@ -295,23 +317,8 @@
           </div>
         </div>
       </div>
-      <div class="small-project-card" style="background-image: url(./img/making-logo.png)" data-micromodal-trigger="making-modal">
-        <div class="background-overlay">
-        </div>
-        <div class="small-text-wrapper">
 
-          <div class="small-text">
-            <h2 class="small-title">Making It Stick</h2>
-            <h2 class="small-role">UI/UX Designer</h2>
-            <ul class="keys-list" id="small-keys-list">
-              <li class="small-key" id="ux">UX</li>
-              <li class="small-key" id="ui">UI</li>
-              <li class="small-key" id="illustrator">Illustrator</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="small-project-card" style="background-image: url(./img/engs12-icon.png)" data-micromodal-trigger="engs12-modal">
+      <!-- <div class="small-project-card" style="background-image: url(./img/engs12-icon.png)" data-micromodal-trigger="engs12-modal">
         <div class="background-overlay">
         </div>
         <div class="small-text-wrapper">
@@ -340,7 +347,7 @@
             </ul>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 
@@ -465,15 +472,15 @@
     </div>
   </div>
 
-  <!-- <div class="modal micromodal-slide" id="team4tech-modal" aria-hidden="true">
+  <div class="modal micromodal-slide" id="team4tech-modal" aria-hidden="true">
     <div class="modal__overlay" tabindex="-1" data-micromodal-close>
       <div class="modal__container" role="dialog" aria-modal="true">
         <header class="modal__header">
           <div class="modal-title">
-            React Blog
+            Team4Tech
           </div>
           <div class="modal-role">
-            Development Project
+            Marketing
           </div>
           <button class="modal__close" data-micromodal-close>
             <i class="fa fa-times" data-micromodal-close aria-hidden="true"></i>
@@ -482,15 +489,15 @@
         <main class="modal__content">
 
           <div class="modal-description">
-            I created a full-stack blog platform using React, Redux, MongoDB, Node.js and Express. The blog supports
-            basic blog functionality, maintains a commenting system, and also requires user authentication.
-          </div>
-          <div class="modal-description">
-            <a class="modal-small-link" target="_blank" href="http://justinluo-redux-blog.surge.sh/">See website</a>
+            As a intern for Team4Tech, I helped redesign several important business documents for the nonprofit organization,
+            including email newsletter, business pricing model, company overview, and project summary
+            page.
           </div>
 
           <div class="modal-image-container">
-            <img class="modal-image" src="./img/small/react-blog.png" />
+            <img class="modal-image" id="page" src="./img/small/t4t-overview.png" />
+            <img class="modal-image" id="page" src="./img/small/t4t-pricing.png" />
+            <img class="modal-image" id="page" src="./img/small/t4t-project.png" />
           </div>
         </main>
       </div>
@@ -502,10 +509,10 @@
       <div class="modal__container" role="dialog" aria-modal="true">
         <header class="modal__header">
           <div class="modal-title">
-            React Blog
+            Seabird Apps
           </div>
           <div class="modal-role">
-            Development Project
+            Animation | Marketing
           </div>
           <button class="modal__close" data-micromodal-close>
             <i class="fa fa-times" data-micromodal-close aria-hidden="true"></i>
@@ -514,15 +521,14 @@
         <main class="modal__content">
 
           <div class="modal-description">
-            I created a full-stack blog platform using React, Redux, MongoDB, Node.js and Express. The blog supports
-            basic blog functionality, maintains a commenting system, and also requires user authentication.
-          </div>
-          <div class="modal-description">
-            <a class="modal-small-link" target="_blank" href="http://justinluo-redux-blog.surge.sh/">See website</a>
+            While working for Seabird Apps, I helped create the company logo animation, as well as the app launch
+            animation for the Dartmouth Student App.
           </div>
 
           <div class="modal-image-container">
-            <img class="modal-image" src="./img/small/react-blog.png" />
+            <img class="modal-image" id="sq" src="./img/small/seabird-logo-sq.gif" />
+            <img class="modal-image" id="sq" src="./img/small/seabird-pine-sq.gif" />
+
           </div>
         </main>
       </div>
@@ -534,10 +540,10 @@
       <div class="modal__container" role="dialog" aria-modal="true">
         <header class="modal__header">
           <div class="modal-title">
-            React Blog
+            Making It Stick
           </div>
           <div class="modal-role">
-            Development Project
+            UI/UX Design
           </div>
           <button class="modal__close" data-micromodal-close>
             <i class="fa fa-times" data-micromodal-close aria-hidden="true"></i>
@@ -546,22 +552,26 @@
         <main class="modal__content">
 
           <div class="modal-description">
-            I created a full-stack blog platform using React, Redux, MongoDB, Node.js and Express. The blog supports
-            basic blog functionality, maintains a commenting system, and also requires user authentication.
+            Making It Stick is a mobile application that tests financial literacy. The app was meant to be used as
+            an additional resource for adults who are taking classes in personal finance.
           </div>
           <div class="modal-description">
-            <a class="modal-small-link" target="_blank" href="http://justinluo-redux-blog.surge.sh/">See website</a>
+            <a class="modal-small-link" target="_blank" href="https://www.youtube.com/watch?v=TO_X-n_SpPA">See demo video</a>
           </div>
 
           <div class="modal-image-container">
-            <img class="modal-image" src="./img/small/react-blog.png" />
+            <img class="modal-image" id="iphone" src="./img/small/mis1-iphone.png" />
+            <img class="modal-image" id="iphone" src="./img/small/mis2-iphone.png" />
+            <img class="modal-image" id="iphone" src="./img/small/mis3-iphone.png" />
+
+
           </div>
         </main>
       </div>
     </div>
   </div>
 
-  <div class="modal micromodal-slide" id="engs12-modal" aria-hidden="true">
+  <!-- <div class="modal micromodal-slide" id="engs12-modal" aria-hidden="true">
     <div class="modal__overlay" tabindex="-1" data-micromodal-close>
       <div class="modal__container" role="dialog" aria-modal="true">
         <header class="modal__header">
