--- a/index.html
+++ b/index.html
@@ -454,11 +454,8 @@
         <main class="modal__content">
 
           <div class="modal-description">
-            The bell rings, you put your papers away in a folder, throw the folder into your backpack, and head towards
-            the door. "Wait, please pick up a problem set before you leave," the professor says. All
-            the students around you groan as they take off their backpacks, but you've got a Handout
-            Pocket. Now all those last minute handouts have a space to go, and you can be on your way
-            out the door!
+            Introducing the Handout Pocket, the perfect solution for all those pesky last minute handouts. It attaches
+            to your existing backpack easily and makes sure that your on your way as soon as possible!
           </div>
           <div class="modal-description">
             <a class="modal-small-link" target="_blank" href="./pages/handout-pocket.pdf">See PDF presentation</a>
@@ -495,9 +492,9 @@
           </div>
 
           <div class="modal-image-container">
-            <img class="modal-image" id="page" src="./img/small/t4t-overview.png" />
-            <img class="modal-image" id="page" src="./img/small/t4t-pricing.png" />
-            <img class="modal-image" id="page" src="./img/small/t4t-project.png" />
+            <img class="modal-image" id="page" src="./img/small/t4t-overview.PNG" />
+            <img class="modal-image" id="page" src="./img/small/t4t-pricing.PNG" />
+            <img class="modal-image" id="page" src="./img/small/t4t-project.PNG" />
           </div>
         </main>
       </div>
