project presentation stic

--- a/index.html
+++ b/index.html
@@ -208,7 +208,9 @@
             <!-- <a class="project-link" href="./pages/stic.html">
               <p>See the process</p>
             </a> -->
-            <p> Details coming soon! </p>
+            <a class="project-link" href="./pages/stic.pdf" target="_blank">
+              <p>See presentation PDF</p>
+            </a>
           </div>
           <div class="project-photo">
             <img class="project-img" src="./img/stic-logo.png" />
