added pointers to prev/next main proj

--- a/pages/unmasked.html
+++ b/pages/unmasked.html
@@ -309,6 +309,22 @@
 
 
   </div>
+
+  <div class="next-links-container">
+    <div class="next-link">
+      <a class="next-link" href="../index.html">
+        Back to home
+      </a>
+    </div>
+    <div class="next-link">
+      <a class="next-link" href="lor.html">
+         See next project - Left On Read
+     </a>
+    </div>
+  </div>
+  <div>
+    <h1 class="footer">Designed and created by Justin Luo. All rights reserved.</h1>
+  </div>
   <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js "></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js " integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin=" anonymous "></script>
