--- a/pages/lor.html
+++ b/pages/lor.html
@@ -288,6 +288,24 @@
     <p class="page-normal-text "> Since the end of spring 2018, we have been working on a design overhaul and preparing for a mass
       launch to the rest of the world. Check out what we're up to at leftonread.me </p>
 
+
+  </div>
+
+  <div class="next-links-container">
+    <div class="next-link">
+      <a class="next-link" href="../index.html">
+        Back to home
+      </a>
+    </div>
+    <div class="next-link">
+      <a class="next-link" href="unmasked.html">
+         See next project - Unmasked
+     </a>
+    </div>
+  </div>
+
+  <div>
+    <h1 class="footer">Designed and created by Justin Luo. All rights reserved.</h1>
   </div>
   <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js "></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js " integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
