--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script src="https://use.fontawesome.com/f1cdcabfb0.js"></script>
 
 </head>
-
 <body>
+
   <!-- Navigation bar -->
   <nav>
     <div>
@@ -39,6 +39,7 @@
 
   <!-- Bio -->
   <div class="bio-box">
+    <div class="bio-box-wrapper">
     <div class="bio-text">
       <h1 id="bio-intro">JUSTIN LUO</h1>
       <h2 id="bio-description">DESIGNER | DEVELOPER</h2>
@@ -77,8 +78,10 @@
     <!-- <div class="bio-pic">
         <img id="justin-pic" src="./img/justin.jpg" alt="justin">
       </div> -->
+    </div>
   </div>
 
+  <div class="body-wrapper">
 
 
   <!-- About Me -->
@@ -110,9 +113,12 @@
   <div class="projects-background">
 
     <!-- Left on Read -->
+
     <div class="project-wrapper" id="left-project">
       <!-- <div class="project-background" id="left">
     </div> -->
+    <a class="project-link" href="./pages/lor.html">
+
       <div class="large-project-card" id="left-section">
         <div class="project-card-header">
           <div class="project-name">
@@ -133,22 +139,29 @@
             <p> "Analyze your texts. Explore the data. See who your friends are."</p>
             <p> Left On Read allows users to analyze their Messages conversations on macOS devices. </p>
             <!-- <p> Left On Read is a website that allows users to view analytics about their Messages conversations on macOS devices. Left On Read started as a final group project for my Full Stack Web Development class.</p> -->
-            <a class="project-link" href="./pages/lor.html">
-              <p>Learn more
-              </p>
-            </a>
-          </div>
+              <div class="see-more-button" id="lor">
+
+              <p class="project-link-text">See more</p>
+
+            </div>
+
+        </div>
           <div class="project-photo">
             <img class="project-img" src="./img/lor-logo.png" />
           </div>
         </div>
       </div>
+    </a>
+
     </div>
+
 
     <!-- Unmasked -->
     <div class="project-wrapper" id="right-project">
       <!-- <div class="project-background" id="right">
     </div> -->
+    <a class="project-link" href="./pages/unmasked.html">
+
       <div class="large-project-card" id="right-section">
         <div class="project-card-header">
           <div class="project-name">
@@ -169,23 +182,30 @@
             <p class="tagline"> "How might we create a annonymous community to discuss mental health issues at Dartmouth?
               "
             </p>
-            <p> Dartmouth Unmasked is a mobile application that allows Dartmouth students to annonymously
+            <p>Unmasked is a mobile application that allows students to annonymously
               discuss mental health and other personal issues.</p>
-            <a class="project-link" href="./pages/unmasked.html">
-              <p>Learn more</p>
-            </a>
-          </div>
+
+              <div class="see-more-button" id="unmasked">
+
+              <p class="project-link-text">See more</p>
+            </div>
+
+        </div>
           <div class="project-photo">
             <img class="project-img" src="./img/unmasked-icon.png" />
           </div>
         </div>
       </div>
+    </a>
+
     </div>
 
     <!-- STIC -->
     <div class="project-wrapper" id="left-project">
       <!-- <div class="project-background" id="left">
     </div> -->
+    <a class="project-link" href="./pages/stic.pdf" target="_blank">
+
       <div class="large-project-card" id="left">
         <div class="project-card-header">
           <div class="project-name">
@@ -208,15 +228,19 @@
             <!-- <a class="project-link" href="./pages/stic.html">
               <p>See the process</p>
             </a> -->
-            <a class="project-link" href="./pages/stic.pdf" target="_blank">
-              <p>See presentation PDF</p>
-            </a>
-          </div>
+                <div class="see-more-button" id="stic">
+
+                <p class="project-link-text">See more</p>
+                </div>
+
+        </div>
           <div class="project-photo">
             <img class="project-img" src="./img/stic-logo.png" />
           </div>
         </div>
       </div>
+    </a>
+
     </div>
 
     <div class="other-projects">
@@ -366,9 +390,7 @@
     <h1 class="coming-soon">Coming soon!</h1>
   </div>
 
-  <div>
-    <h1 class="footer">Designed and created by Justin Luo. All rights reserved.</h1>
-  </div>
+
 
   <!-- Other Project Modals -->
 
@@ -640,6 +662,11 @@
     crossorigin="anonymous"></script>
   <script src="./js/bootstrap.js"></script>
   <script type="text/javascript" src="./js/main.js"></script>
+</div>
+
+<div>
+  <h1 class="footer">Designed and created by Justin Luo. All rights reserved.</h1>
+</div>
 </body>
 
 </html>
