--- a/pages/unmasked.html
+++ b/pages/unmasked.html
@@ -24,7 +24,7 @@
     <div class="page-header-content">
       <h1 class="page-title">UNMASKED</h1>
       <h2 class="page-role">UI/UX DESIGNER</h2>
-      <h2 class="page-team">Worked with Dorothy Qu and Eric Wang</h2>
+      <h2 class="page-team">with Dorothy Qu and Eric Wang</h2>
       <h3 class="page-tagline">How might we create a annonymous community to discuss mental health issues at Dartmouth?</h3>
     </div>
   </div>
@@ -304,24 +304,19 @@
       of our user experience and not considered how potential features could negatively affect the main
       purpose of the application.</p>
 
-
+      <div class="next-links-container">
+          <a class="next-link" href="../index.html">
+            Back to home
+          </a>
+          <a class="next-link" href="lor.html">
+             See next project - Left On Read
+         </a>
+      </div>
 
 
 
   </div>
 
-  <div class="next-links-container">
-    <div class="next-link">
-      <a class="next-link" href="../index.html">
-        Back to home
-      </a>
-    </div>
-    <div class="next-link">
-      <a class="next-link" href="lor.html">
-         See next project - Left On Read
-     </a>
-    </div>
-  </div>
   <div>
     <h1 class="footer">Designed and created by Justin Luo. All rights reserved.</h1>
   </div>
