--- a/pages/unmasked.html
+++ b/pages/unmasked.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Justin Luo</title>
+  <link rel="shortcut icon" type="image/png" href="../img/favicon.png"/>
   <link rel="stylesheet" type="text/css" href="../css/style.css">
   <link rel="stylesheet" type="text/css" href="../css/project.css">
   <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
