fixed skill tags, some css spacing

--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
           </div>
           <div class="project-keys">
             <ul class="keys-list">
-              <li class="key" id="ui">UI</li>
-              <li class="key" id="ux">UX</li>
+              <li class="key" id="ux">UI/UX</li>
               <li class="key" id="react">REACT/REDUX</li>
               <li class="key" id="js">JS</li>
             </ul>
@@ -171,8 +170,7 @@
           </div>
           <div class="project-keys">
             <ul class="keys-list">
-              <li class="key" id="ui">UI</li>
-              <li class="key" id="ux">UX</li>
+              <li class="key" id="ux">UI/UX</li>
               <li class="key" id="illustrator">ILLUSTRATOR</li>
               <li class="key" id="sketch-figma">SKETCH</li>
             </ul>
@@ -211,11 +209,11 @@
         <div class="project-card-header">
           <div class="project-name">
             <h2 class="project-title">STIC</h2>
-            <h3 class="project-role">Product Designer | Marketing Lead </h3>
+            <h3 class="project-role">Product Designer</h3>
           </div>
           <div class="project-keys">
             <ul class="keys-list">
-              <li class="key" id="illustrator">ILLUSTRATOR</li>
+              <li class="key" id="product">PRODUCT DESIGN</li>
               <li class="key" id="research">USER RESEARCH</li>
               <li class="key" id="prototyping">PROTOTYPING</li>
             </ul>
@@ -259,7 +257,7 @@
             <h2 class="small-role">Product Designer</h2>
             <ul class="keys-list" id="small-keys-list">
               <li class="small-key" id="prototyping">Prototyping</li>
-              <li class="small-key" id="illustrator">Illustrator</li>
+              <li class="small-key" id="product">Product Design</li>
               <li class="small-key" id="after-effects">After Effects</li>
             </ul>
           </div>
@@ -290,8 +288,7 @@
             <h2 class="small-title">Making It Stick</h2>
             <h2 class="small-role">UI/UX Designer</h2>
             <ul class="keys-list" id="small-keys-list">
-              <li class="small-key" id="ux">UX</li>
-              <li class="small-key" id="ui">UI</li>
+              <li class="small-key" id="ux">UI/UX</li>
               <li class="small-key" id="illustrator">Illustrator</li>
             </ul>
           </div>
