added all photos

--- a/index.html
+++ b/index.html
@@ -377,6 +377,8 @@
 
 
 
+
+
   <div id="adventure-section">
     <div class="title-wrapper">
       <h1 class="section-title">Adventures</h1>
@@ -384,9 +386,163 @@
     </div>
   </div>
 
-  <div>
-    <h1 class="coming-soon">Coming soon!</h1>
+  <div class="adventure-wrapper">
+    <div class="adventure-text">
+      <div class="adventure-title">
+        Canyonlands - Utah
+      </div>
+      <div class="adventure-sub">
+        March 2018
+      </div>
+    </div>
+    <div class="adventure-photos">
+      <div class="landscape-photo">
+        <img src="./img/photos/utah-ls.jpg">
+      </div>
+      <div class="portrait-photo">
+        <img src="./img/photos/utah-p.jpg">
+      </div>
+      <div class="landscape-photo">
+        <img src="./img/photos/utah-ls2.jpg">
+      </div>
+      <div class="portrait-photo">
+        <img src="./img/photos/utah-p2.jpg">
+      </div>
+      <div class="landscape-photo">
+        <img src="./img/photos/utah-ls3.jpg">
+      </div>
+      <div class="portrait-photo">
+        <img src="./img/photos/utah-p3.jpg">
+      </div>
+    </div>
+
   </div>
+
+  <div class="adventure-wrapper">
+    <div class="adventure-text">
+      <div class="adventure-title">
+        Mt. Lemmon - Arizona
+      </div>
+      <div class="adventure-sub">
+        December 2017
+      </div>
+    </div>
+    <div class="adventure-photos">
+      <div class="portrait-photo">
+        <img src="./img/photos/az-p.jpg">
+      </div>
+      <div class="portrait-photo">
+        <img src="./img/photos/az-p2.jpg">
+      </div>
+      <div class="portrait-photo">
+        <img src="./img/photos/az-p3.jpg">
+      </div>
+      <div class="portrait-photo">
+        <img src="./img/photos/az-p4.jpg">
+      </div>
+    </div>
+
+  </div>
+
+  <div class="adventure-wrapper">
+    <div class="adventure-text">
+      <div class="adventure-title">
+        The Big Island - Hawaii
+      </div>
+      <div class="adventure-sub">
+        March 2017
+      </div>
+    </div>
+    <div class="adventure-photos">
+      <div class="landscape-photo">
+        <img src="./img/photos/hawaii-ls.jpg">
+      </div>
+      <div class="landscape-photo">
+        <img src="./img/photos/hawaii-ls2.jpg">
+      </div>
+      <div class="landscape-photo">
+        <img src="./img/photos/hawaii-ls3.jpg">
+      </div>
+      <div class="landscape-photo">
+        <img src="./img/photos/hawaii-ls4.jpg">
+      </div>
+      <div class="landscape-photo">
+        <img src="./img/photos/hawaii-ls5.jpg">
+      </div>
+      <div class="landscape-photo">
+        <img src="./img/photos/hawaii-ls6.jpg">
+      </div>
+      <div class="landscape-photo">
+        <img src="./img/photos/hawaii-ls7.jpg">
+      </div>
+    </div>
+
+  </div>
+
+  <div class="adventure-wrapper">
+    <div class="adventure-text">
+      <div class="adventure-title">
+        Dartmouth - New Hampshire
+      </div>
+    </div>
+    <div class="adventure-photos">
+      <div class="landscape-photo">
+        <img src="./img/photos/dartmouth-ls.jpg">
+      </div>
+      <div class="portrait-photo">
+        <img src="./img/photos/dartmouth-p.jpg">
+      </div>
+      <div class="landscape-photo">
+        <img src="./img/photos/dartmouth-ls2.jpg">
+      </div>
+      <div class="portrait-photo">
+        <img src="./img/photos/dartmouth-p1.jpg">
+      </div>
+      <div class="landscape-photo">
+        <img src="./img/photos/dartmouth-ls3.jpg">
+      </div>
+    </div>
+
+    <div class="adventure-wrapper">
+      <div class="adventure-text">
+        <div class="adventure-title">
+          Budapest
+        </div>
+        <div class="adventure-sub">
+          Fall 2018
+        </div>
+      </div>
+      <div class="adventure-photos">
+        <div class="landscape-photo">
+          <img src="./img/photos/budapest-ls.jpg">
+        </div>
+        <div class="portrait-photo">
+          <img src="./img/photos/budapest-p.jpg">
+        </div>
+        <div class="landscape-photo">
+          <img src="./img/photos/budapest-ls2.jpg">
+        </div>
+      </div>
+  </div>
+
+  <div class="adventure-wrapper">
+    <div class="adventure-text">
+      <div class="adventure-title">
+        San Francisco
+      </div>
+      <div class="adventure-sub">
+        Summer 2017
+      </div>
+    </div>
+    <div class="adventure-photos">
+      <div class="landscape-photo">
+        <img src="./img/photos/sf-ls.jpg">
+      </div>
+      <div class="portrait-photo">
+        <img src="./img/photos/sf-p.jpg">
+      </div>
+    </div>
+</div>
 
 
 
