added animations + timeline

--- a/index.html
+++ b/index.html
@@ -294,22 +294,6 @@
           </div>
         </div>
       </div>
-      <div class="small-project-card" style="background-image: url(./img/team4tech-logo.png)" data-micromodal-trigger="team4tech-modal">
-        <div class="background-overlay">
-        </div>
-
-        <div class="small-text-wrapper">
-
-          <div class="small-text">
-            <h2 class="small-title">Team4Tech</h2>
-            <h2 class="small-role">Marketing Intern</h2>
-            <ul class="keys-list" id="small-keys-list">
-              <li class="small-key" id="marketing">Marketing</li>
-              <li class="small-key" id="illustrator">Illustrator</li>
-            </ul>
-          </div>
-        </div>
-      </div>
 
 
       <div class="small-project-card" style="background-image: url(./img/reactblog-icon.png)" data-micromodal-trigger="react-blog-modal">
@@ -386,124 +370,110 @@
     </div>
   </div>
 
+  <div class="adventures-section">
+
   <div class="adventure-wrapper">
-    <div class="adventure-text">
+    <div class="adventure-container">
+    <div class="adventure-text" id="first-text">
       <div class="adventure-title">
-        Canyonlands - Utah
+        Canyonlands, UT
       </div>
       <div class="adventure-sub">
         March 2018
       </div>
     </div>
     <div class="adventure-photos">
-      <div class="landscape-photo">
-        <img src="./img/photos/utah-ls.jpg">
+      <div class="adventure-column">
+        <img class="adventure-photo" src="./img/photos/utah-ls.jpg">
+        <img class="adventure-photo" src="./img/photos/utah-p.jpg">
+        <img class="adventure-photo" src="./img/photos/utah-ls2.jpg">
       </div>
-      <div class="portrait-photo">
-        <img src="./img/photos/utah-p.jpg">
-      </div>
-      <div class="landscape-photo">
-        <img src="./img/photos/utah-ls2.jpg">
-      </div>
-      <div class="portrait-photo">
-        <img src="./img/photos/utah-p2.jpg">
-      </div>
-      <div class="landscape-photo">
-        <img src="./img/photos/utah-ls3.jpg">
-      </div>
-      <div class="portrait-photo">
-        <img src="./img/photos/utah-p3.jpg">
+      <div class="adventure-column">
+        <img class="adventure-photo" src="./img/photos/utah-ls3.jpg">
+        <img class="adventure-photo" src="./img/photos/utah-p3.jpg">
+        <img class="adventure-photo" src="./img/photos/utah-p2.jpg">
       </div>
     </div>
-
+  </div>
   </div>
 
   <div class="adventure-wrapper">
+    <div class="adventure-container">
+
     <div class="adventure-text">
       <div class="adventure-title">
-        Mt. Lemmon - Arizona
+        Mount Lemmon, AZ
       </div>
       <div class="adventure-sub">
         December 2017
       </div>
     </div>
     <div class="adventure-photos">
-      <div class="portrait-photo">
-        <img src="./img/photos/az-p.jpg">
+      <div class="adventure-column">
+        <img class="adventure-photo" src="./img/photos/az-p.jpg">
+        <img class="adventure-photo" src="./img/photos/az-p2.jpg">
       </div>
-      <div class="portrait-photo">
-        <img src="./img/photos/az-p2.jpg">
-      </div>
-      <div class="portrait-photo">
-        <img src="./img/photos/az-p3.jpg">
-      </div>
-      <div class="portrait-photo">
-        <img src="./img/photos/az-p4.jpg">
+      <div class="adventure-column">
+        <img class="adventure-photo" src="./img/photos/az-p3.jpg">
+        <img class="adventure-photo" src="./img/photos/az-p4.jpg">
       </div>
     </div>
-
+  </div>
   </div>
 
   <div class="adventure-wrapper">
+    <div class="adventure-container">
+
     <div class="adventure-text">
       <div class="adventure-title">
-        The Big Island - Hawaii
+        The Big Island, HI
       </div>
       <div class="adventure-sub">
         March 2017
       </div>
     </div>
     <div class="adventure-photos">
-      <div class="landscape-photo">
-        <img src="./img/photos/hawaii-ls.jpg">
+      <div class="adventure-column">
+        <img class="adventure-photo" src="./img/photos/hawaii-ls.jpg">
+        <img class="adventure-photo" src="./img/photos/hawaii-ls2.jpg">
+        <img class="adventure-photo" src="./img/photos/hawaii-ls3.jpg">
+        <!-- <img class="adventure-photo" src="./img/photos/hawaii-ls4.jpg"> -->
       </div>
-      <div class="landscape-photo">
-        <img src="./img/photos/hawaii-ls2.jpg">
-      </div>
-      <div class="landscape-photo">
-        <img src="./img/photos/hawaii-ls3.jpg">
-      </div>
-      <div class="landscape-photo">
-        <img src="./img/photos/hawaii-ls4.jpg">
-      </div>
-      <div class="landscape-photo">
-        <img src="./img/photos/hawaii-ls5.jpg">
-      </div>
-      <div class="landscape-photo">
-        <img src="./img/photos/hawaii-ls6.jpg">
-      </div>
-      <div class="landscape-photo">
-        <img src="./img/photos/hawaii-ls7.jpg">
-      </div>
+    <div class="adventure-column">
+        <img class="adventure-photo" src="./img/photos/hawaii-ls5.jpg">
+        <img class="adventure-photo" src="./img/photos/hawaii-ls6.jpg">
+        <img class="adventure-photo" src="./img/photos/hawaii-ls7.jpg">
+    </div>
+  </div>
     </div>
 
   </div>
 
   <div class="adventure-wrapper">
+    <div class="adventure-container">
     <div class="adventure-text">
       <div class="adventure-title">
-        Dartmouth - New Hampshire
+        Dartmouth, NH
       </div>
     </div>
     <div class="adventure-photos">
-      <div class="landscape-photo">
-        <img src="./img/photos/dartmouth-ls.jpg">
+      <div class="adventure-column">
+        <img class="adventure-photo" src="./img/photos/dartmouth-ls.jpg">
+        <img class="adventure-photo" src="./img/photos/dartmouth-ls2.jpg">
+        <img class="adventure-photo" src="./img/photos/dartmouth-ls3.jpg">
+
       </div>
-      <div class="portrait-photo">
-        <img src="./img/photos/dartmouth-p.jpg">
-      </div>
-      <div class="landscape-photo">
-        <img src="./img/photos/dartmouth-ls2.jpg">
-      </div>
-      <div class="portrait-photo">
-        <img src="./img/photos/dartmouth-p1.jpg">
-      </div>
-      <div class="landscape-photo">
-        <img src="./img/photos/dartmouth-ls3.jpg">
+      <div class="adventure-column">
+        <img class="adventure-photo" src="./img/photos/dartmouth-p.jpg">
+        <img class="adventure-photo" src="./img/photos/dartmouth-p1.jpg">
+
       </div>
     </div>
+  </div>
+  </div>
 
     <div class="adventure-wrapper">
+      <div class="adventure-container">
       <div class="adventure-text">
         <div class="adventure-title">
           Budapest
@@ -513,35 +483,37 @@
         </div>
       </div>
       <div class="adventure-photos">
-        <div class="landscape-photo">
-          <img src="./img/photos/budapest-ls.jpg">
+        <div class="adventure-column">
+          <img class="adventure-photo" src="./img/photos/budapest-ls.jpg">
+          <img class="adventure-photo" src="./img/photos/budapest-ls2.jpg">
         </div>
-        <div class="portrait-photo">
-          <img src="./img/photos/budapest-p.jpg">
-        </div>
-        <div class="landscape-photo">
-          <img src="./img/photos/budapest-ls2.jpg">
+        <div class="adventure-column">
+          <img class="adventure-photo" src="./img/photos/budapest-p.jpg">
         </div>
       </div>
+    </div>
   </div>
 
   <div class="adventure-wrapper">
+    <div class="adventure-container">
     <div class="adventure-text">
       <div class="adventure-title">
-        San Francisco
+        San Francisco, CA
       </div>
       <div class="adventure-sub">
         Summer 2017
       </div>
     </div>
     <div class="adventure-photos">
-      <div class="landscape-photo">
-        <img src="./img/photos/sf-ls.jpg">
+      <div class="adventure-column">
+        <img class="adventure-photo" src="./img/photos/sf-ls.jpg">
       </div>
-      <div class="portrait-photo">
-        <img src="./img/photos/sf-p.jpg">
+      <div class="adventure-column">
+        <img class="adventure-photo" src="./img/photos/sf-p.jpg">
       </div>
     </div>
+  </div>
+  </div>
 </div>
 
 
