--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1 id="bio-intro">JUSTIN LUO</h1>
       <h2 id="bio-description">DESIGNER | DEVELOPER</h2>
       <p id="bio-text">I am fascinated by the intersection between design and technology. By creating intuitive and beautiful
-        solutions, I aim to create delightful user experiences through technology.</p>
+        solutions, I aim to create delightful user experiences.</p>
       <div id="resume-button">
         <a id="resume-link" href="./pages/Justin-Luo-Resume.pdf" target="_blank">
           <p id="see-resume">See Resume</p>
